<resources>
    <string name="app_name">Ownfarm</string>
    <string name="profile">Profile</string>
    <string name="information_account">Informasi akun</string>
    <string name="name">Nama Lengkap</string>
    <string name="phonenum">No. Telepon</string>
    <string name="city">Kota</string>
    <string name="ward">Kelurahan</string>
    <string name="subdistrict">Kecamatan</string>
    <string name="password">Kata Sandi</string>
    <string name="date">Tanggal</string>
    <string name="address">Alamat</string>
    <string name="request">Request Barang</string>
    <string name="exit_account">Keluar akun</string>
    <string name="edit_account">Edit Profile</string>
    <string name="notification">Notifikasi</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="logictic">Logistik Barang</string>
    <string name="form">Formulir Permohonan</string>
    <string name="pupuk">Pupuk</string>
    <string name="bibit">Bibit</string>
    <string name="obat_tanaman">Obat Tanaman</string>
    <string name="alat_pertanian">Alat Pertanian</string>
    <string name="quantity">Jumlah</string>
    <string name="fill">Isi di sini</string>
    <string name="reason">Alasan Request Barang</string>
    <string name="reason_text">Alasan</string>
    <string name="cancel">Batalkan</string>
    <string name="send">Kirim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="jumlah">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>