<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogistikBarangActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logictic"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_gravity="center"
                android:text="@string/form"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/darkyellow"/>

                    <EditText
                        android:id="@+id/EditTextName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingStart="10dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="name"
                        android:text="@string/name"
                        android:textSize="15sp"
                        android:background="@drawable/rounded_shape_edittext"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phonenum"
                        android:textColor="@color/darkyellow"/>

                    <EditText
                        android:id="@+id/EditTextNumberPhone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingStart="10dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="name"
                        android:text="@string/phonenum"
                        android:textSize="15sp"
                        android:background="@drawable/rounded_shape_edittext"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/darkyellow"/>


                    <EditText
                        android:id="@+id/EditTextDate"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="name"
                        android:text="@string/date"
                        android:textSize="15sp"
                        android:background="@drawable/rounded_shape_edittext"
                        android:drawableEnd="@drawable/calendar_yellow"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/address"
                                android:textColor="@color/darkyellow"/>

                            <EditText
                                android:id="@+id/EditTextLocation"
                                android:layout_width="190dp"
                                android:layout_height="40dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:layout_marginTop="10dp"
                                android:autofillHints="name"
                                android:text="@string/address"
                                android:textSize="15sp"
                                android:background="@drawable/rounded_shape_edittext"
                                android:drawableEnd="@drawable/location_yellow_1"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_alignParentEnd="true"
                            android:gravity="end">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ward"
                                android:layout_marginEnd="75dp"
                                android:textColor="@color/darkyellow" />

                            <EditText
                                android:id="@+id/EditTextWard"
                                android:layout_width="140dp"
                                android:layout_height="40dp"
                                android:paddingStart="20dp"
                                android:paddingEnd="10dp"
                                android:layout_marginTop="10dp"
                                android:autofillHints="date"
                                android:textSize="15sp"
                                android:background="@drawable/rounded_shape_edittext" />

                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/request"
                                android:textColor="@color/darkyellow"/>

                            <CheckBox android:id="@+id/CheckBoxPupuk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pupuk" />

                            <CheckBox android:id="@+id/CheckBoxBibit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bibit"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="100dp"
                            android:orientation="vertical"
                            android:layout_alignParentEnd="true"
                            android:gravity="end">

                            <CheckBox android:id="@+id/CheckBoxObatTanaman"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/obat_tanaman" />

                            <CheckBox android:id="@+id/CheckBoxAlatPertanian"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/alat_pertanian"/>


                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/EditTextQuantity"
                                android:layout_width="240dp"
                                android:layout_height="40dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:layout_marginTop="10dp"
                                android:autofillHints="name"
                                android:text="@string/fill"
                                android:textSize="15sp"
                                android:background="@drawable/rounded_shape_edittext"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_alignParentEnd="true"
                            android:gravity="end">


                            <androidx.cardview.widget.CardView
                                android:id="@+id/CardQuantity"
                                android:layout_width="80dp"
                                android:layout_height="40dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:layout_marginTop="10dp"
                                app:cardCornerRadius="10dp"
                                app:cardBackgroundColor="@color/gray">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/quantity"
                                    android:textSize="15sp"
                                    android:gravity="center"/>
                            </androidx.cardview.widget.CardView>

                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reason"
                        android:textColor="@color/darkyellow"/>

                    <EditText
                        android:id="@+id/EditTextReason"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:paddingStart="10dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="name"
                        android:text="@string/reason_text"
                        android:textSize="15sp"
                        android:background="@drawable/rounded_shape_edittext"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/Cancel"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:text="@string/cancel"
                        android:textSize="15sp"
                        android:backgroundTint="@color/green"/>

                    <Button
                        android:id="@+id/Send"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/send"
                        android:textSize="15sp"
                        android:backgroundTint="@color/green"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>