<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:text="@string/profile"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/green"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="20dp"
                android:orientation="horizontal">
                
              <com.google.android.material.imageview.ShapeableImageView
                  android:id="@+id/UserImage"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_launcher_background"/>

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingStart="20dp"
                  android:paddingEnd="20dp"
                  android:paddingTop="20dp"
                  android:orientation="vertical">

                  <TextView
                      android:id="@+id/NameUser"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Imas"
                      android:textSize="25sp"
                      android:textStyle="bold"
                      android:textColor="@color/green"/>

                  <TextView
                      android:id="@+id/EmailUser"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Imas@gmail.com"
                      android:textSize="17sp"
                      android:textColor="@color/black"/>

              </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/information_account"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:paddingTop="30dp"
                        app:cardBackgroundColor="@color/gray"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingStart="5dp"
                                android:text="@string/name"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                            <TextView
                                android:id="@+id/UserName"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="Imas"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:paddingTop="30dp"
                        app:cardBackgroundColor="@color/gray"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingStart="5dp"
                                android:text="@string/phonenum"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                            <TextView
                                android:id="@+id/NumberPhone"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="+62 891234567"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:paddingTop="30dp"
                        app:cardBackgroundColor="@color/gray"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingStart="5dp"
                                android:text="@string/city"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                            <TextView
                                android:id="@+id/City"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="Bandung"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:paddingTop="30dp"
                        app:cardBackgroundColor="@color/gray"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingStart="5dp"
                                android:text="@string/ward"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                            <TextView
                                android:id="@+id/Ward"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="Bandung"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:paddingTop="30dp"
                        app:cardBackgroundColor="@color/gray"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingStart="5dp"
                                android:text="@string/subdistrict"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                            <TextView
                                android:id="@+id/Subdistric"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="Bandung"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:paddingTop="30dp"
                        app:cardBackgroundColor="@color/gray"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingStart="5dp"
                                android:text="@string/password"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                            <TextView
                                android:id="@+id/Password"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="Ima******"
                                android:textStyle="bold"
                                android:textColor="@color/green"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
</RelativeLayout>